# SPDX-FileCopyrightText: 2011-2022 Squall Line Software, LLC
# SPDX-FileCopyrightText: 2022 Peter Urban, Ghent University
#
# SPDX-License-Identifier: MIT

# source: https://oss.squalllinesoftware.com/projects/disorder/files *geographiclib-2.0.meson.tar.gz
# souce(direct link): https://oss.squalllinesoftware.com/attachments/30


geographiclib_sources = files(
    'Accumulator.cpp',
    'AlbersEqualArea.cpp',
    'AzimuthalEquidistant.cpp',
    'CassiniSoldner.cpp',
    'CircularEngine.cpp',
    'DMS.cpp',
    'DST.cpp',
    'kissfft.hh',
    'Ellipsoid.cpp',
    'EllipticFunction.cpp',
    'GARS.cpp',
    'Geocentric.cpp',
    'GeoCoords.cpp',
    'Geodesic.cpp',
    'GeodesicExact.cpp',
    'GeodesicLine.cpp',
    'GeodesicLineExact.cpp',
    'Geohash.cpp',
    'Geoid.cpp',
    'Georef.cpp',
    'Gnomonic.cpp',
    'GravityCircle.cpp',
    'GravityModel.cpp',
    'LambertConformalConic.cpp',
    'LocalCartesian.cpp',
    'MagneticCircle.cpp',
    'MagneticModel.cpp',
    'Math.cpp',
    'MGRS.cpp',
    'NormalGravity.cpp',
    'OSGB.cpp',
    'PolarStereographic.cpp',
    'PolygonArea.cpp',
    'Rhumb.cpp',
    'SphericalEngine.cpp',
    'TransverseMercator.cpp',
    'TransverseMercatorExact.cpp',
    'Utility.cpp',
    'UTMUPS.cpp',
)
